--- a/LatihanModul1.html
+++ b/LatihanModul1.html
@@ -104,6 +104,6 @@
 
     document.getElementById('hist1').addEventListener('click',function(){
         var hist = obj1.hist2read([parseInt(document.getElementById('histval').value)])
-        obj2.hist2canvas(hist1[0],10);
+        obj2.hist2canvas(hist[0],10);
     })
     </script>
